# Leetcode-cf-tracker

./: .env.production  ACHIEVEMENTS_DEVELOPER_GUIDE.md  ACHIEVEMENTS_IMPLEMENTATION.md  ACHIEVEMENTS_REFERENCE.md  ACHIEVEMENTS_STATUS.md  Dockerfile  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_REPORT.md  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  ecosystem.config.cjs  eslint.config.js  index.html  manage-services.sh  package-lock.json  package.json  vite.config.ts
cpp-executor/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
server/: Dockerfile  package-lock.json  package.json  tsconfig.json
server/src/: index.ts
src/: App.tsx  App.tsx.backup  index.css
src/components/: Achievements.tsx  Analytics.tsx  AuthModal.tsx  CodeEditor.tsx  CodeEditor.tsx.backup  CompanyProblemsView.tsx  ContestForm.tsx  Dashboard.tsx  DrawingBoardPage.tsx  ErrorBoundary.tsx  ImportProblems.tsx  MasterSheet.tsx  PracticeSession.tsx  PracticeSession.tsx.backup2  ProblemForm.tsx  ProblemList.tsx  ProblemTabs.tsx  Settings.tsx  Timer.tsx  ToSolveProblemList.tsx  achievements.css  theme-provider.tsx
src/components/__tests__/: AuthModal.test.tsx  ProblemForm.test.tsx  Settings.test.tsx
src/components/charts/: ActivityChart.tsx  DifficultyChart.tsx  (+3 more)
src/hooks/: useAchievements.ts  useContests.ts  useNotifications.ts  useProblemForm.ts  useProblems.ts
src/lib/: achievements.ts  communismQuotes.ts  topics.ts
src/services/: api.ts
src/types/: index.ts
src/utils/: contestFetcher.ts  settingsStorage.ts  storage.ts
systemd/: leetcode-cf-tracker.service
(+6 files in other folders)
